# JLoxInCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Environment.cpp  Expression.cpp  Expression.hpp  Interpreter.cpp  Interpreter.hpp  LuaBirali.cpp  LuaBirali.hpp  Parser.cpp  Parser.hpp  README.md  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp  compile_commands.json  include.hpp
.cache/clangd/index/: Environment.cpp.98B4E48FC4DBAA70.idx  Environment.hpp.33321CA42D95BDFC.idx  Expression.cpp.E7C141F68030CAC0.idx  Expression.hpp.D1ACB9402070E9ED.idx  Interpreter.cpp.1B1113886BD2B59D.idx  Interpreter.hpp.178EF344EDD47DEE.idx  LuaBirali.cpp.34F307ECA3CE2D6C.idx  LuaBirali.hpp.295CFEC532839F2E.idx  Parser.cpp.BB53D4A76C6FEEE7.idx  Parser.hpp.AD1F6681F61DFB6D.idx  Scanner.cpp.AC6393F67AF1B1CD.idx  Scanner.hpp.DDFD42232B55BAA8.idx  Token.cpp.339D6F177AE62F77.idx  Token.hpp.C898143D4DA08C7D.idx  include.hpp.74E540813D0D1EDD.idx
include/: Environment.hpp  Expression.hpp  Interpreter.hpp  LuaBirali.hpp  Parser.hpp  Resolver.hpp  Token.hpp  include.hpp
src/: Environment.cpp  Environment.hpp  Expression.cpp  Expression.hpp  Interpreter.cpp  Interpreter.hpp  LuaBirali.cpp  Parser.cpp  Parser.hpp  Resolver.cpp  Scanner.cpp  Token.cpp  Token.hpp  main.cpp
utility/: CMakeLists.txt  ParserGenerator.cpp  ParserGenerator.hpp  Strings.hpp
